Fix for card width overlap

--- a/builder_styles.css
+++ b/builder_styles.css
@@ -2,6 +2,8 @@
 .card, .menu-item{
     margin: 0px 10px;
     display: flex;
+    height: fit-content;
+    width: fit-content;
 }
 
 .dropdown-container {
